--- a/events/static/events/css/register.css
+++ b/events/static/events/css/register.css
@@ -193,15 +193,25 @@
     overflow: hidden;
     background-color: rgba(0,0,0,0.5);
     border-radius: 0 15px 15px 0;
+    height: 100%;
     max-height: 100%;
 }
 
 .form-sidepanel img {
-    max-width: 150%;
-    max-height: auto;
+    height: 120%;
+    width: auto;
+    text-align: center;
     overflow: hidden;
-    object-fit: cover;
+    object-fit: contain;
     overflow: hidden;
+    position: relative;
+    scale: 1
+}
+
+@media only screen and (min-width: 1750px) {
+    .form-sidepanel img {
+        height: 200%;
+    }
 }
 
 .profile-sidepanel {
@@ -279,8 +289,8 @@
 
 /* Individual Img Positioning */
 
-#side-img-login {
+/* #side-img-login {
     position: relative;
     top: -80px;
     left: -110px;
-}
+} */
