--- a/events/static/events/css/register.css
+++ b/events/static/events/css/register.css
@@ -25,7 +25,7 @@
 }
 
 .form-container-register {
-    height: 65rem;
+    height: 70rem;
 }
 
 .form-container-login {
@@ -53,6 +53,10 @@
 
     .form-container-register {
         height: 75rem;
+    }
+
+    .form-container-event-register {
+        height: 45rem;
     }
 }
 
@@ -214,6 +218,12 @@
     }
 }
 
+@media only screen and (max-width: 1200px) {
+    .form-sidepanel img {
+        height: 100%;
+    }
+}
+
 .profile-sidepanel {
     background-color: rgba(0,0,0,0.25);
     grid-area: profile-sidepanel;
@@ -286,11 +296,3 @@
     background-color: var(--info);
     color: black;
 }
-
-/* Individual Img Positioning */
-
-/* #side-img-login {
-    position: relative;
-    top: -80px;
-    left: -110px;
-} */
