--- a/events/templates/events/event_list.html
+++ b/events/templates/events/event_list.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block content %}
     <section class="events">
-        <h1>Tournaments</h1>
+        <!-- <h1 id="page-header">Tournaments</h1> -->
         {% for event in events %}
             <div class="banner">
                 <div class="video-wrapper">
