--- a/events/templates/events/base.html
+++ b/events/templates/events/base.html
@@ -30,6 +30,8 @@
         <title>Weekly Tournaments</title>
     {% endif %}
     
+    <!-- Global JS Scripts -->
+    <script src="{% static 'events/javascript/hoverControl.js' %}" defer></script>
 </head>
 <body>
     <header>
