--- a/events/static/events/css/main.css
+++ b/events/static/events/css/main.css
@@ -88,7 +88,7 @@ main {
     color: var(--primary);
 }
 
-.navbar a:hover {
+body.hasHover .navbar a:hover {
     color: var(--accent);
     transition: 0.3s;
 }
@@ -157,7 +157,7 @@ a:visited {
     color: lightblue;
 }
 
-a:hover {
+body.hasHover a:hover {
     color: var(--accent);
     transition: 0.3s;
 }
@@ -190,7 +190,7 @@ a:active {
     color: var(--primary);
 }
 
-.btn:hover {
+body.hasHover .btn:hover {
     color: black;
     background-color: var(--primary);
     transition: 0.3s;
@@ -215,7 +215,7 @@ a:active {
     border-color: var(--info);
 }
 
-.btn-info:hover {
+body.hasHover .btn-info:hover {
     background-color: var(--info);
 }
 
