--- a/events/templates/events/event_detail.html
+++ b/events/templates/events/event_detail.html
@@ -87,7 +87,7 @@
                     <div class="list-container">
                         <ul class="red-list">
                             <li>The games will be officiated using NBA rules, apart from a few exceptions.</li>
-                            <li><a href="https://official.nba.com/rule-no-1-court-dimensions-equipment/">NBA rulebook</a></li>
+                            <li><a href="https://official.nba.com/rule-no-1-court-dimensions-equipment/" target="_blank">NBA rulebook</a></li>
                             <li>Exception: any shot beyond half-court is worth 4-points</li>
                             <li>Exception: 4-fouls to foul out</li>
                         </ul>
