--- a/events/templates/events/home.html
+++ b/events/templates/events/home.html
@@ -4,7 +4,7 @@
     <div class="home">
         <section class="banner">
             <div class="video-wrapper">
-                <video src="{% static 'events/videos/background_video_002.mp4' %}" autoPlay muted loop>
+                <video src="{% static 'events/videos/background_video_002.mp4' %}" autoPlay muted loop playsinline>
                     Video could not load
                 </video>
                 <div class="overlay-text">
