--- a/events/static/events/css/profile.css
+++ b/events/static/events/css/profile.css
@@ -7,10 +7,9 @@
     grid-template-rows: 20% 1fr;
     width: 100%;
     height: 100rem;
-    max-width: 100%;
 }
 
-@media only screen and (max-width: 750px) {
+@media only screen and (max-width: 900px) {
 
     .profile {
         grid-template-areas: "header"
@@ -55,6 +54,7 @@
 
 .profile h2, h3 {
     font-weight: 200;
+    white-space: normal;
 }
 
 .profile-info-text h2, h3 {
@@ -101,8 +101,25 @@
     .profile-info-text h3 {
         font-size: 1.25rem;
     }
-    
-    
+        
+}
+
+@media only screen and (max-width: 500px) {
+
+    .profile-header {
+        flex-direction: column;
+        justify-content: space-evenly;
+    }
+
+    #profile-header-right {
+        margin-top: 2rem;
+    }
+
+}
+
+.profile-section {
+    width: 100%;
+    overflow: hidden;
 }
 
 .profile-events {
@@ -128,6 +145,17 @@
     font-weight: 200;
     text-transform: uppercase;
     text-align: center;
+}
+
+@media only screen and (max-width: 500px) {
+
+    .profile-section-title {
+        font-size: 1.5rem;
+        font-weight: 200;
+        text-transform: uppercase;
+        text-align: center;
+    }
+
 }
 
 .profile-tab-info {
