--- a/events/templates/events/home.html
+++ b/events/templates/events/home.html
@@ -15,7 +15,7 @@
                     <div class="banner-secondary">
                         <h3>{{ event.title }}</h3>
                         <h3>{{ event.location }}</h3>
-                        <a class="btn home-btn" href="{% url 'event-detail' event.id %}" >Join Tournament</a>
+                        <a id="home-wide-btn" class="btn" href="{% url 'event-detail' event.id %}" >Join Tournament</a>
                     </div>
                 </div>
             </div>
