update introduction video

--- a/events/templates/events/event_detail.html
+++ b/events/templates/events/event_detail.html
@@ -65,7 +65,8 @@
                     <span>Tournament</span>
                     <h1>Info</h1>
                     <div class="iframe-container">
-                        <iframe class="med-video" src="https://www.youtube.com/embed/Yv3e3wDQIGU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe class="med-video" src="https://www.youtube.com/embed/KOdEAM91bzc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <!-- <iframe class="med-video" src="https://www.youtube.com/watch?v=KOdEAM91bzc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
                         <span id="intro-video-title">Introduction Video</span>
                     </div>
                 </div>
