--- a/users/templates/users/password_reset_complete.html
+++ b/users/templates/users/password_reset_complete.html
@@ -1,7 +1,15 @@
 {% extends "events/base.html" %}
+{% load static %}
 {% block content %}
-    <div class="input-form">
-        <h2>Your password has been reset.</h2>
-        <a href="{% url 'login' %}">Sign In Here</a>
+    <div class="form-container form-container-login">
+        <div class="input-form">
+            <legend>Your password has been reset</legend>
+            <div class="button-container">
+                <a style="margin-top: 2rem" href="{% url 'login' %}">Sign In Here</a>
+            </div>
+        </div>
+        <div class="form-sidepanel">
+            <img id="side-img-login" src="{% static 'events/images/background/dunking_outside_002.jpg' %}" alt="">
+        </div>
     </div>
 {% endblock content %}
