fixed event-list picture being too large and hurting performance

--- a/events/templates/events/event_detail.html
+++ b/events/templates/events/event_detail.html
@@ -53,7 +53,7 @@
                         </ul>
                         <ul class="red-list">
                             <li>Pennies are provided</li>
-                            <li>Gatorade and water are provided</li>
+                            <li>Gatorade is provided</li>
                             <li><a href="{% static 'events/images/products/tshirt/wt_tshirt_001.jpg' %}" target="_blank">Free Weekly Tournaments t-shirt</a></li>
                             <li>Your stats are recorded and your highlights are uploaded to our <a href="https://www.youtube.com/channel/UCTEw5NSPbEAAXQUxBdYfyjw" target="_blank">YouTube channel</a></li>
                         </ul>
@@ -90,7 +90,7 @@
                             <li>The games will be officiated using NBA rules, apart from a few exceptions.</li>
                             <li><a href="https://official.nba.com/rule-no-1-court-dimensions-equipment/" target="_blank">NBA rulebook</a></li>
                             <li>Exception: any shot beyond half-court is worth 4-points</li>
-                            <li>Exception: 4-fouls to foul out</li>
+                            <li>Exception: 5-fouls to foul out</li>
                         </ul>
                         <ul class="red-list">
                             <li>Each half is 10-minutes long</li>
