--- a/events/templates/events/event_list.html
+++ b/events/templates/events/event_list.html
@@ -6,7 +6,7 @@
         {% for event in events %}
             <div class="banner">
                 <div class="video-wrapper">
-                    <img id='basketball-list-img' src="{% static 'events/images/types/basketball_001.png' %}" alt="">
+                    <img id='basketball-list-img' src="{% static 'events/images/types/basketball_001.jpg' %}" alt="">
                     <div class="overlay-text">
                         <div class="spacer"></div>
                         <div class="banner-title">
