Proof reading spelling and grammer

--- a/events/templates/events/event_detail.html
+++ b/events/templates/events/event_detail.html
@@ -75,10 +75,7 @@
                         <span>Info</span>
                     </div>
                     <p>
-                        The event is a 5 vs. 5 full court tournament, consisting of 8 teams.
-                        Each team will get to play at least 2 games. As there is a 2-game regular season that determines who goes to the final four.
-                        The final four is single-elimination, so in total that's a max of four games.
-                        All games will be officiated by a trained referee. <br>
+                        The event is a 5 vs. 5 full court tournament, consisting of 8 teams. Each team will get to play at least 2 games, as there is a 2-game regular season that determines who goes to the final four. The final four is single-elimination, so in total that's a max of four games. All games will be officiated by a trained referee. <br>
                     </p>
                 </div>
                 <div class="section-main-text">
@@ -109,7 +106,7 @@
                             The tiebreaker rules in order:
                         </p>
                         <ul class="red-list">
-                            <li>the winner of any head to head matchups</li>
+                            <li>The winner of any head to head matchups</li>
                             <li>Higher point differential</li>
                             <li>Total points scored</li>
                             <li>Shoot for it</li>
