--- a/events/templates/events/event_register.html
+++ b/events/templates/events/event_register.html
@@ -8,9 +8,9 @@
                     <legend>Register for {{ event.title }}</legend>
                 </div>
                 {% if adult_only %}
-                    <h3>This tournament is for participants 16+</h3>
+                    <h3>This tournament is recommended for participants 16+</h3>
                 {% endif %}
-                <p class="small center">To register for tournament, make the payment through paypal, navigate back to this page, and click the register button.</p>
+                <p class="small center">To register for the tournament, make the payment through paypal, navigate back to this page, and click the register button.</p>
             </div>
             {% if is_filled == False %}
                 {% if registered == False %}
