--- a/events/templates/events/event_register_success.html
+++ b/events/templates/events/event_register_success.html
@@ -7,8 +7,7 @@
                 <legend>Congrats! You have been registered for the tournament.</legend>
                 <div class="success-text">
                     <p class="center">
-                        The next step is to add teammates if you have them, 
-                        but don't worry we'll make a team for you if you're solo this time.
+                        The next step is to add teammates if you have them, but don't worry, we'll make a team for you if you're solo this time.
                     </p>
                     <p class="center">
                         You can also choose teammates later from your <a id="inline-link" href="{% url 'profile' %}">profile</a> page.
