Fix a few spelling and grammar mistakes

--- a/events/templates/events/event_detail.html
+++ b/events/templates/events/event_detail.html
@@ -52,7 +52,7 @@
                             <li>Referees are provided for each game</li>
                         </ul>
                         <ul class="red-list">
-                            <li>Pennies are provided</li>
+                            <li>Pinnies are provided</li>
                             <li>Gatorade is provided</li>
                             <li><a href="{% static 'events/images/products/tshirt/wt_tshirt_001.jpg' %}" target="_blank">Free Weekly Tournaments t-shirt</a></li>
                             <li>Your stats are recorded and your highlights are uploaded to our <a href="https://www.youtube.com/channel/UCTEw5NSPbEAAXQUxBdYfyjw" target="_blank">YouTube channel</a></li>
