--- a/events/templates/events/event_detail.html
+++ b/events/templates/events/event_detail.html
@@ -84,10 +84,10 @@
                     </div>
                     <div class="list-container">
                         <ul class="red-list">
-                            <li>The games will be officiated using NBA rules, apart from a few exceptions.</li>
-                            <li><a href="https://official.nba.com/rule-no-1-court-dimensions-equipment/" target="_blank">NBA rulebook</a></li>
-                            <li>Exception: any shot beyond half-court is worth 4-points</li>
-                            <li>Exception: 5-fouls to foul out</li>
+                            <li>The games will be officiated using MSHSL rules, apart from a few exceptions.</li>
+                            <li><a href="https://www.mshsl.org/sites/default/files/2020-08/bb_rulesandpolicies_20202021.pdf" target="_blank">Rulebook</a></li>
+                            <li>2-timeouts per game</li>
+                            <li>5-fouls to foul out</li>
                         </ul>
                         <ul class="red-list">
                             <li>Each half is 10-minutes long</li>
