make view and template for bug report page, give labels custom text

--- a/events/static/events/css/register.css
+++ b/events/static/events/css/register.css
@@ -46,6 +46,10 @@
     height: 55rem;
 }
 
+.form-container-bug-report {
+    height: 82rem;
+}
+
 #update-profile-container {
     height: 55rem;
     grid-template-areas: "input-form profile-sidepanel";
