finish bug report functionality

--- a/events/templates/events/base.html
+++ b/events/templates/events/base.html
@@ -74,6 +74,10 @@
             <h1>Get in touch</h1>
             <span class="tag">Email:</span><a href="mailto:weeklytournaments0@gmail.com">weeklytournaments0@gmail.com</a>
         </div>
+        <div class="extra">
+            <h1>More links</h1>
+            <a href="{% url 'analytics-bug-report' %}">Report a bug</a>
+        </div>
         <div class="copyright">
             <span class="smaller-text">&copy; Copyright 2022, Noah Turnquist. All Rights Reserved</span>
         </div>
