Updated for 2v2 tournament

--- a/events/static/events/css/main.css
+++ b/events/static/events/css/main.css
@@ -286,6 +286,10 @@ body.hasHover .btn-info:hover {
     height: 25rem;
 }
 
+.informational .image-omitted {
+    height: 10rem;
+}
+
 .informational .section-header div:before {
     content: "";
     margin-left: -100%;
