a few more changes

--- a/events/templates/events/event_detail.html
+++ b/events/templates/events/event_detail.html
@@ -15,7 +15,7 @@
                     <div class="banner-secondary">
                         <h3>{{ object.title }}</h3>
                         <h3>{{ object.location }}</h3>
-                        {% if is_filled == False %}
+                        <!-- {% if is_filled == False %}
                             {% if registered == False %}
                                 <a class="btn" href="{% url 'event-register' %}?event={{ event.pk }}" >Register</a>
                             {% else %}
@@ -24,7 +24,7 @@
                         {% else %}
                             <span class="btn-deactivated">Tournament Full</span>
                         {% endif %}
-                        <h4>{{ object.registered_users.count }} / {{ object.max_users }} Spots Filled</h4>
+                        <h4>{{ object.registered_users.count }} / {{ object.max_users }} Spots Filled</h4> -->
                     </div>
                 </div>
             </div>
