--- a/events/templates/events/base.html
+++ b/events/templates/events/base.html
@@ -50,11 +50,11 @@
                     {% if request.user.is_staff %}
                         <li><a href="{% url 'event-create' %}">New Tournament</a></li>
                     {% endif %}
-                    <li><a href="{% url 'profile' %}">Profile</a></li>
-                    <li><a href="{% url 'logout' %}">Logout</a></li>
+                    <!-- <li><a href="{% url 'profile' %}">Profile</a></li>
+                    <li><a href="{% url 'logout' %}">Logout</a></li> -->
                 {% else %}
-                    <li><a href="{% url 'login' %}">Login</a></li>
-                    <li><a href="{% url 'register' %}">Register</a></li>
+                    <!-- <li><a href="{% url 'login' %}">Login</a></li>
+                    <li><a href="{% url 'register' %}">Register</a></li> -->
                 {% endif %}
             </ul>
         </nav>
