got rid of tournament info section header

--- a/events/templates/events/event_detail.html
+++ b/events/templates/events/event_detail.html
@@ -64,9 +64,9 @@
                 </div>
             </section> -->
             <section class="informational">
-                <div class="section-header image-omitted" id="tournament-info">
+                <!-- <div class="section-header image-omitted" id="tournament-info">
                     <span>Tournament Info</span>
-                    <!-- <h1>Info</h1> -->
+                    <h1>Info</h1>
                     {% if object.price == '0' %}
                         <h1>Pricing</h1>
                         <div id="price-display-container">
@@ -74,7 +74,7 @@
                             <span id="price-display">${{ object.price }}</span>
                         </div>
                     {% endif %}
-                </div>
+                </div> -->
                 <div class="section-main-text">
                     <div class="tag">
                         <span>Info</span>
@@ -93,13 +93,12 @@
                             <li>No make it take it</li>
                             <li>Call your own fouls</li>
                             <li>And-1s do count</li>
-                            <li>Half court and sidelines are out</li>
                         </ul>
                         <ul class="red-list">
+                            <li>Half court and sidelines are out</li>
                             <li>Levels (must pass before dribbling or scoring)</li>
-                            <li>2-minute halftime</li>
                             <li>Your stats are recorded and your highlights are uploaded to our <a href="https://www.youtube.com/channel/UCTEw5NSPbEAAXQUxBdYfyjw" target="_blank">YouTube channel</a></li>
-                            <li>Gatorade is provided</li>
+                            <!-- <li>Gatorade is provided</li> -->
                         </ul>
                     </div>
                 </div>
